--- a/_config.vivia.yml
+++ b/_config.vivia.yml
@@ -39,7 +39,7 @@ categories:
 
 # Personal info
 avatar: /assets/avatar.png
-author: 涼宮ハルヒ
+author: 秋元 真宵
 subtitle: 好啊，来罢（喜
 links:
   - name: GitHub
@@ -65,4 +65,4 @@ google_analytics: false #UA-xxxxxx
 baidu_analytics: false # ddxxxxxxxxxxxxxxxxx In the https://hm.baidu.com/hm.js? Afterwards
 
 #Copyright
-copyright: <strong>欢迎来到SSR团~ 谨向你们致以热烈的问候！</strong><br>
+copyright: <strong>欢迎来到Oneko社群~ 谨向你们致以热烈的问候！</strong><br>
