--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hexo-renderer-marked": "^6.0.0",
     "hexo-renderer-stylus": "^3.0.0",
     "hexo-server": "^3.0.0",
+    "hexo-tag-cloudmusic": "^1.2.3",
     "hexo-theme-landscape": "^1.0.0",
     "hexo-theme-vivia": "^0.4.2"
   }
